# ML

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
src/diffusion/: README.md  diffusion_lab - Copie.py  diffusion_lab.py  diffusion_lab_first_try.py  diffusion_lab_v2.py  diffusion_lab_v3.py  diffusion_lab_v4.py  try.py
src/mlp/: README.md  dot_cloud_clustering.ipynb  dot_cloud_worl_clustering.ipynb
src/unet/: README.md  drawing_bike.py  gemini_unet_urban_bike.ipynb  marimo_inference.py  marimo_training.py  unet_model.py  unet_urban_bike_training.ipynb
